# my-test

./: README.md  config.js  pyproject.toml  renovate.json
.github/: .copier-answers-renovate-template.yaml  .copier-answers-workflow-templates.yaml
.github/old_workflows/: hello_world.yaml
.github/workflows/: github_release.yaml  hello_world.yaml  increase_version-pr.yaml  increase_version-push.yaml  increase_version.yaml  increase_version_pr.yaml  test03.yaml  test04.yaml  test05.yaml  unittest.yaml
argo/: deployment.yaml.jinja
k8s/: nginx.yaml  postgres.yaml  redis.yaml
