[tool.poetry]
name = "my-test"
version = "0.2.93"
description = ""
authors = ["Philipp Jaschke <philipp.jaschke@schulz.st>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
pydantic = "2.6.4"
trio = "0.23.2"
cdk-lambda-subminute = "2.0.338"
cdk-aurora-globaldatabase = "2.3.440"
test234 = {git = "https://github.com/PJ-Schulz/test234.git", tag = "3.1.4"}
redis = {git = "https://github.com/redis/redis-py.git", tag = "v5.0.3"}

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
hypothesis = "6.99.13"
flake8 = "6.1.0"
isort = "5.13.2"
pepperize-cdk-ses-smtp-credentials = "0.3.628"
pepperize-cdk-organizations = "0.7.768"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
